--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,21 @@
     <plugins>
 
       <plugin>
+       <groupId>org.springframework.boot</groupId>
+       <artifactId>spring-boot-maven-plugin</artifactId>
+       <configuration>
+         <jvmArguments>-Xmx512m -XX:MaxDirectMemorySize=1200m</jvmArguments>
+       </configuration>
+       <executions>
+         <execution>
+           <goals>
+           <goal>build-info</goal>
+           </goals>
+         </execution>
+      </executions>
+      </plugin>
+             
+      <plugin>
         <!-- Configures the compiler. -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
