--- a/pom.xml
+++ b/pom.xml
@@ -19,40 +19,17 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
   </properties>
-
-  <dependencies>
-  </dependencies>
-
   <build>
     <plugins>
-
-      <plugin>
-       <groupId>org.springframework.boot</groupId>
-       <artifactId>spring-boot-maven-plugin</artifactId>
-       <configuration>
-         <jvmArguments>-Xmx512m -XX:MaxDirectMemorySize=1200m</jvmArguments>
-       </configuration>
-       <executions>
-         <execution>
-           <goals>
-           <goal>build-info</goal>
-           </goals>
-         </execution>
-      </executions>
-      </plugin>
-             
-      <plugin>
-        <!-- Configures the compiler. -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.2</version>
-        <configuration>
-          <compilerArgs>
-            <arg>-Xlint</arg>
-          </compilerArgs>
-        </configuration>
-      </plugin>
-
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.8.1</version>
+		<configuration>
+			<source>1.8</source>
+			<target>1.8</target>
+		</configuration>
+	</plugin>
     </plugins>
   </build>
 </project>
